Sending text to supplier/view matings/ delete matings that failed

--- a/res/layout/finish.xml
+++ b/res/layout/finish.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:weightSum="1">
 
     <TextView
             android:layout_width="wrap_content"
@@ -22,25 +22,26 @@
             android:layout_alignParentStart="true"
             android:layout_alignEnd="@+id/textView46" android:layout_alignTop="@+id/button13"
             android:layout_gravity="center_horizontal"/>
-    <RelativeLayout
+    <TextView
             android:layout_width="match_parent"
-            android:layout_height="346dp" android:layout_gravity="center_horizontal">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large rre"
-                android:id="@+id/textView46"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"/>
-        <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Home"
-                android:onClick="Home"
-                android:id="@+id/button13"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true" android:layout_alignParentEnd="true"/>
-    </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Medium Text"
+            android:id="@+id/textView46" android:layout_gravity="center_horizontal" android:layout_weight="0.67"/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:background="@drawable/notification"
+            android:layout_height="139dp" android:layout_gravity="center_horizontal"
+            android:layout_weight="0.32">
+    </LinearLayout>
+    <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:onClick="Home"
+            android:id="@+id/button13"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" android:layout_alignParentEnd="true"/>
 </LinearLayout>
