--- a/res/layout/bullsel.xml
+++ b/res/layout/bullsel.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/backgroundgrass"
-                android:weightSum="1" android:id="@+id/">
+                android:weightSum="1" android:id="@+id/gtr">
 
     <TextView
             android:layout_width="wrap_content"
