--- a/res/layout/bullpicked.xml
+++ b/res/layout/bullpicked.xml
@@ -3,6 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@drawable/sky2"
               android:weightSum="1">
 
     <RelativeLayout
@@ -208,30 +209,31 @@
                 android:stepSize="0.5"
                 android:layout_below="@+id/textView39" android:layout_alignStart="@+id/textView94"/>
         <Button
-                style="?android:attr/buttonStyleSmall"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Back"
                 android:onClick="back"
                 android:id="@+id/button6"
+                android:textStyle="bold"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_toLeftOf="@+id/textView32"
-                android:layout_toStartOf="@+id/textView32"/>
+                android:layout_toStartOf="@+id/textView32" android:textColor="#FFFFFF"/>
         <Button
-                style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Test Mate"
                 android:onClick="mate"
                 android:id="@+id/button7"
+                android:textStyle="bold"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignTop="@+id/button6"
                 android:layout_toEndOf="@+id/textView32"
-                android:layout_toRightOf="@+id/textView32"/>
+                android:layout_toRightOf="@+id/textView32" android:textColor="#FFFFFF"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
