--- a/res/layout/bullsearch.xml
+++ b/res/layout/bullsearch.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:background="@drawable/backgroundgrass"
+                android:background="@drawable/sky2"
                 android:layout_height="match_parent">
 
     <RadioButton
@@ -40,14 +40,15 @@
             android:layout_toEndOf="@+id/spinner2"
             android:checked="false"/>
     <Button
-            style="?android:attr/buttonStyleSmall"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Refine"
             android:onClick="Refine"
+            android:textStyle="bold"
             android:id="@+id/button5"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
+            android:layout_alignParentStart="true" android:layout_alignParentEnd="true" android:textColor="#FFFFFF"/>
     <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
