--- a/res/layout/bullsel.xml
+++ b/res/layout/bullsel.xml
@@ -3,7 +3,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/backgroundgrass"
+                android:background="@drawable/sky2"
                 android:weightSum="1" android:id="@+id/gtr">
 
     <TextView
@@ -17,7 +17,7 @@
     <TextView
             android:layout_width="327dp"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Medium Text"
             android:id="@+id/textView17"
             android:layout_gravity="center_horizontal"
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/listView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:layout_below="@+id/textView17"/>
+            android:scrollingCache="false"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="40dp" android:layout_below="@+id/textView17"/>
 </RelativeLayout>
