--- a/res/layout/finish.xml
+++ b/res/layout/finish.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
+              android:background="@drawable/sky2"
               android:layout_height="match_parent" android:weightSum="1">
 
     <TextView
@@ -41,7 +42,8 @@
             android:layout_height="wrap_content"
             android:text="Home"
             android:onClick="Home"
+            android:textStyle="bold"
             android:id="@+id/button13"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" android:layout_alignParentEnd="true"/>
+            android:layout_alignParentStart="true" android:layout_alignParentEnd="true" android:textColor="#FFFFFF"/>
 </LinearLayout>
