--- a/res/layout/hello.xml
+++ b/res/layout/hello.xml
@@ -24,7 +24,7 @@
 				  android:text="Read Ear Tag             "
 				  android:textStyle="bold"
 				  android:id="@+id/textView3"
-				  android:layout_weight="0.41"/>
+				  android:layout_weight="0.41" android:textColor="#FFFFFF"/>
 		<Button
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
                 android:text="Enter ID"
 				android:textStyle="bold"
                 android:id="@+id/textView"
-		/>
+				android:textColor="#FFFFFF"/>
 		<EditText
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
@@ -86,7 +86,8 @@
 				android:text="View Active Bulls          "
 				android:textStyle="bold"
 				android:id="@+id/textView48"
-				android:layout_alignBottom="@+id/button2" android:layout_alignParentStart="true"/>
+				android:layout_alignBottom="@+id/button2" android:layout_alignParentStart="true"
+				android:textColor="#ffffff"/>
 		<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="Bull List"
@@ -108,7 +109,7 @@
 				android:textStyle="bold"
 				android:id="@+id/textView63"
 				android:layout_marginTop="33dp"
-				android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
+				android:layout_alignParentTop="true" android:layout_alignParentStart="true" android:textColor="#FFFFFF"/>
 		<Button
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
@@ -130,7 +131,7 @@
 				android:textStyle="bold"
 				android:id="@+id/textView102"
 				android:layout_centerVertical="true"
-				android:layout_alignParentStart="true"/>
+				android:layout_alignParentStart="true" android:textColor="#FFFFFF"/>
 		<Button
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
