--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent" 
-    android:layout_gravity="fill_horizontal" 
+    android:layout_gravity="fill_horizontal"
+			  android:background="@drawable/splash"
     android:orientation="vertical">
 	<TextView  
 	    android:layout_width="fill_parent" 
