--- a/res/layout/viewbulllist.xml
+++ b/res/layout/viewbulllist.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:background="@drawable/sky2"
                 android:layout_height="match_parent">
 
     <RadioButton
@@ -45,9 +46,9 @@
             android:text="Refine"
             android:onClick="Refine"
             android:id="@+id/button5"
-            android:layout_marginBottom="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"/>
     <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
