--- a/res/layout/bullsel.xml
+++ b/res/layout/bullsel.xml
@@ -32,5 +32,14 @@
             android:id="@+id/listView"
             android:scrollingCache="false"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="40dp" android:layout_below="@+id/textView17"/>
+            android:layout_marginBottom="50dp" android:layout_below="@+id/textView17"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Return"
+            android:onClick="return1"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:id="@+id/button9" android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
 </RelativeLayout>
