--- a/res/layout/filterviewbulllist.xml
+++ b/res/layout/filterviewbulllist.xml
@@ -33,5 +33,14 @@
             android:id="@+id/listView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView17"/>
+            android:layout_below="@+id/textView17" android:layout_marginBottom="50dp"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Return"
+            android:onClick="return1"
+            android:textStyle="bold"
+            android:textColor="#FFFFFF"
+            android:id="@+id/button14" android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" android:layout_alignParentEnd="true"/>
 </RelativeLayout>
